# suruga-seiki-ew51-api

./: .gitignore  ARCHITECTURE_ANALYSIS.md  ASYNC_ARCHITECTURE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml
app/: config.py  controller_manager.py  dependencies.py  factory.py  main.py  mock_controller.py  models.py  task_manager.py
app/routers/: README.md  __init__.py  alignment.py  angle_adjustment.py  connection.py  io.py  motion.py  position.py  profile.py  servo.py  websocket.py
app/tasks/: __init__.py  alignment_task.py  angle_adjustment_task.py  base_task.py  motion_task.py  profile_task.py
examples/: README_ASYNC_TESTS.md  peaksearchXposition.txt  peaksearchXsignal.txt  peaksearchYposition.txt  peaksearchYsignal.txt  test_angle_adjustment.py  test_async_motion_with_stop.py  test_flat_alignment.py  test_profile_measurement.py  test_relative_then_absolute.py  test_rest_api_alignment.py  test_rest_api_angle_adjustment.py  test_rest_api_motion.py  test_rest_api_optical_alignment.py  test_rest_api_profile_measurement.py  test_simple_async_motion_stop.py
scripts/: manual_control.py
