[project]
name = "suruga-seiki-ew51-api"
version = "1.0.0"
description = "FastAPI server for Suruga Seiki EW51 probe station control"
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi[standard]>=0.109.0",
    "websockets>=12.0",
    "python-multipart>=0.0.6",
    "pythonnet>=3.0.3",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-json-logger>=2.0.7",
    "colorlog>=6.8.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.1",
    "ruff>=0.2.2",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
